workspace-sf/force-app/main/default/objects/Pais__c/Pais__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar os dados dos países</description>
    <label>País</label>
    <nameField>
        <label>Pais Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Países</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>