workspace-sf/force-app/main/default/objects/Pais__c/fields/CodigoISOAlpha2__c.field-meta.xml
<CustomField>
    <fullName>CodigoISOAlpha2__c</fullName>
    <label>Código ISO Alpha-2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>