workspace-sf/force-app/main/default/objects/Pais__c/fields/CodigoISOAlpha3__c.field-meta.xml
<CustomField>
    <fullName>CodigoISOAlpha3__c</fullName>
    <label>Código ISO Alpha-3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>