workspace-sf/force-app/main/default/objects/Pais__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>